/第一次上傳

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vue-cli-service serve --open",
+    "build": "vue-cli-service build",
+    "proto": "pbjs -t json-module -w commonjs -o src/proto/proto.js src/proto/*.proto",
+    "protots": "pbjs -t static-module src/proto/*.proto | pbts -o src/proto/proto.d.ts -"
   },
   "dependencies": {
+    "protobufjs": "^6.11.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
