--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "protots": "pbjs -t static-module src/proto/*.proto | pbts -o src/proto/proto.d.ts -"
   },
   "dependencies": {
+    "flv.js": "^1.6.2",
+    "gsap": "^3.7.1",
     "protobufjs": "^6.11.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-fullscreen": "^3.0.11",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
