--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "proto": "pbjs -t json-module -w es6 -o src/assets/js/proto.js src/proto/*/*.proto",
-    "protots": "pbjs -t static-module src/proto/*/*.proto | pbts -o src/assets/js/proto.d.ts -"
+    "proto": "pbjs -t static-module -w es6 -o src/assets/js/bundle.js src/proto/*/*.proto",
+    "protots": "pbjs -t static-module src/proto/*/*.proto | pbts -o src/assets/js/bundle.d.ts -"
   },
   "dependencies": {
     "flv.js": "^1.6.2",
