--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.7.1",
     "protobufjs": "^6.11.2",
     "save": "^2.4.0",
+    "screenfull": "^5.1.0",
     "vue": "^3.2.14",
     "vue-class-component": "^8.0.0-0",
     "vue-fullscreen": "^3.0.11",
