--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "protots": "pbjs -t static-module src/proto/*/*.proto | pbts -o src/assets/js/bundle.d.ts -"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.0",
     "bootstrap": "^4.5.3",
     "flv.js": "^1.6.2",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "popper.js": "^1.16.1",
     "protobufjs": "^6.11.2",
     "save": "^2.4.0",
