--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.0",
-    "@vue/cli-plugin-babel": "^4.5.15",
     "bootstrap": "^4.5.3",
+    "core-js": "^3.19.1",
     "flv.js": "^1.6.2",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
@@ -27,6 +27,7 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.5.15",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
@@ -36,6 +37,22 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {
+      "no-undef": "off"
+    }
   },
   "browserslist": [
     "> 1%",
