--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
+    "dev": "vite --open",
+    "build": "vite build",
+    "serve": "vite preview",
     "proto": "pbjs -t static-module -w es6 -o src/assets/js/bundle.js src/proto/*/*.proto",
     "protots": "pbjs -t static-module src/proto/*/*.proto | pbts -o src/assets/js/bundle.d.ts -",
     "buildDev8199": "vue-cli-service build --mode development8199"
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "bootstrap": "^4.5.3",
-    "core-js": "^3.19.1",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
@@ -20,6 +21,7 @@
     "protobufjs": "^6.11.2",
     "save": "^2.4.0",
     "screenfull": "^5.1.0",
+    "vite": "^4.0.0",
     "vue": "^3.2.14",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -28,15 +30,9 @@
   "devDependencies": {
     "@types/bootstrap": "^5.1.9",
     "@types/jquery": "^3.5.13",
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-loader": "^8.2.3",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   },
   "eslintConfig": {
